--- a/Eldarya Tax Calculator/Eldarya Tax Calculator.vbproj
+++ b/Eldarya Tax Calculator/Eldarya Tax Calculator.vbproj
@@ -18,6 +18,12 @@
     <WindowsXamlEnableOverview>true</WindowsXamlEnableOverview>
     <PackageCertificateKeyFile>Eldarya Tax Calculator_StoreKey.pfx</PackageCertificateKeyFile>
     <PackageCertificateThumbprint>1763A5B0A67D095587233C7EDBA978246278DF3E</PackageCertificateThumbprint>
+    <GenerateAppInstallerFile>False</GenerateAppInstallerFile>
+    <AppxAutoIncrementPackageRevision>True</AppxAutoIncrementPackageRevision>
+    <AppxBundle>Always</AppxBundle>
+    <AppxBundlePlatforms>x86|x64|arm|arm64</AppxBundlePlatforms>
+    <AppInstallerUpdateFrequency>1</AppInstallerUpdateFrequency>
+    <AppInstallerCheckForUpdateFrequency>OnApplicationRun</AppInstallerCheckForUpdateFrequency>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Debug|x86'">
     <DebugSymbols>true</DebugSymbols>
@@ -144,6 +150,7 @@
     </AppxManifest>
     <None Include="Eldarya Tax Calculator_StoreKey.pfx" />
     <None Include="Eldarya Tax Calculator_TemporaryKey.pfx" />
+    <PRIResource Include="Strings\en-US\Resources.resw" />
     <PRIResource Include="Strings\fr-FR\Resources.resw" />
     <PRIResource Include="Strings\fr-CA\Resources.resw" />
     <PRIResource Include="Strings\en-CA\Resources.resw" />
